# cooklang-reports

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: config.rs  error.rs  extension.rs  key_path.rs  lib.rs  model.rs  oldmodel.rs  parser.rs
src/filters/: mod.rs  numeric.rs  price.rs  quantity.rs  string.rs
src/functions/: aisle.rs  datastore.rs  ingredient_list.rs  mod.rs  numeric.rs  pantry.rs
src/model/: content.rs  content_list.rs  cookware.rs  ingredient.rs  ingredient_list.rs  item.rs  metadata.rs  mod.rs  quantity.rs  section.rs  step.rs  timer.rs
test/data/: aisle.conf  pantry.conf
test/data/db/eggs/: shopping.yml
test/data/db/flour/: shopping.yml
test/data/db/milk/: shopping.yml
test/data/recipes/: Blog Post.cook  Chinese Udon Noodles.cook  Contrived Eggs.cook  Pancakes.cook  Recipe With Reference.cook  Recipe With Scaled References.cook  Recipe With Servings.cook  Recipe With Yield.cook
test/data/reports/: aisled_shopping.md.jinja  cost.jinja.md  cost.md.jinja  ingredients.jinja.md  ingredients.md.jinja  recursive_ingredients.md.jinja  shopping_list.md.jinja  smart_shopping.md.jinja
test/data/reports/advanced/: macro.md.jinja  nutriscore.md.jinja
tests/: extension_test.rs
