[package]
name = "cooklang-reports"
version = "0.1.0"
edition = "2024"

[dependencies]
cooklang = "0.15"
minijinja = "2.8"
serde = { version = "1.0", features = ["derive"] }
yaml-datastore = { path = "../yaml-datastore" }
serde_yaml = "0.9"
thiserror = "2.0.12"

[dev-dependencies]
float-cmp = "0.10.0"
indoc = "2.0"
tempfile = "3.8"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"
