[package]
name = "cooklang-reports"
version = "0.1.0"
edition = "2024"
description = "A Rust library for generating reports from Cooklang recipes using Jinja2-style templates"
license = "MIT"
repository = "https://github.com/cooklang/cooklang-reports"
documentation = "https://docs.rs/cooklang-reports"
readme = "README.md"

[dependencies]
cooklang = "0.16"
minijinja = { version = "2.8", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
yaml-datastore = "0.1.0"
serde_yaml = "0.9"
thiserror = "2.0.12"

[dev-dependencies]
float-cmp = "0.10.0"
indoc = "2.0"
tempfile = "3.8"
test-case = "3.3.1"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
expect_used = "warn"
